intermediate x overflow fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -293,7 +293,7 @@ label {
 
 #floor {
     display: inline-block;
-    width: inherit;
+    width: 100%;
     max-height: 500px;
     overflow-y: scroll;
 }
